Inform Menu via D-Bus about application launches
https://github.com/helloSystem/Menu/issues/85

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,13 +14,13 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 # probono: Set rpath
 set(CMAKE_INSTALL_RPATH $ORIGIN/../lib)
 
-find_package(Qt5 COMPONENTS Widgets REQUIRED)
+find_package(Qt5 COMPONENTS Widgets DBus REQUIRED)
 
 add_executable(launch
   src/main.cpp
 )
 
-target_link_libraries(launch PRIVATE Qt5::Widgets)
+target_link_libraries(launch PRIVATE Qt5::Widgets Qt5::DBus)
 
 # probono: Make installable
 install(TARGETS launch
