Rename to prepare for more than one command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set(CMAKE_INSTALL_RPATH $ORIGIN/../lib)
 find_package(Qt5 COMPONENTS Widgets DBus REQUIRED)
 
 add_executable(launch
-  src/main.cpp
+  src/launch.cpp
 )
 
 target_link_libraries(launch PRIVATE Qt5::Widgets Qt5::DBus)
