Handle schemes; install sbin/xdg-open

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,6 +24,10 @@ endif()
 # Set rpath
 set(CMAKE_INSTALL_RPATH $ORIGIN/../lib)
 
+
+# FIXME: Instead of building the same source code three times
+# under different names, find a way to install symlinks to the
+# 'launch' binary in different paths
 add_executable(launch
   src/launch.cpp
   src/dbmanager.h
@@ -48,6 +52,18 @@ add_executable(open
   src/extattrs.cpp
 )
 
+add_executable(xdg-open
+  src/launch.cpp
+  src/dbmanager.h
+  src/dbmanager.cpp
+  src/applicationinfo.h
+  src/applicationinfo.cpp
+  src/appdiscovery.h
+  src/appdiscovery.cpp
+  src/extattrs.h
+  src/extattrs.cpp
+)
+
 add_executable(bundle-thumbnailer
   src/bundle-thumbnailer.cpp
   src/dbmanager.h
@@ -59,11 +75,13 @@ add_executable(bundle-thumbnailer
 if (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
 target_link_libraries(launch Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem procstat)
 target_link_libraries(open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem procstat)
+target_link_libraries(xdg-open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem procstat)
 endif()
 
 if (CMAKE_SYSTEM_NAME MATCHES "Linux")
 target_link_libraries(launch Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem)
 target_link_libraries(open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem)
+target_link_libraries(xdg-open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem)
 endif()
 
 ADD_CUSTOM_TARGET(link_target ALL
@@ -74,3 +92,7 @@ target_link_libraries(bundle-thumbnailer Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERS
 # Allow for 'make install'
 install(TARGETS launch open bundle-thumbnailer
         RUNTIME DESTINATION bin)
+
+# On most systems, sbin has priority on the $PATH over bin
+install(TARGETS xdg-open
+        RUNTIME DESTINATION sbin)
