Do not use sqlite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,10 @@
+# To build without debug output, run:
+# cmake .. -DCMAKE_BUILD_TYPE=Release
+
 cmake_minimum_required(VERSION 3.5)
+
+# Do not print deprecated warnings for Qt5 or KF5
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-deprecated-declarations")
 
 project(launch LANGUAGES CXX)
 
@@ -12,8 +18,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # TODO: Make everything compile under Qt6
-find_package(QT NAMES Qt5 REQUIRED COMPONENTS Widgets DBus Core Sql)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets DBus Core Sql)
+find_package(QT NAMES Qt5 REQUIRED COMPONENTS Widgets DBus Core)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets DBus Core)
 find_package(KF5WindowSystem REQUIRED)
 
 # Do not put qDebug() into Release builds
@@ -82,21 +88,21 @@ add_executable(bundle-thumbnailer
 )
 
 if (CMAKE_SYSTEM_NAME MATCHES "FreeBSD")
-target_link_libraries(launch Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem procstat)
-target_link_libraries(open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem procstat)
-target_link_libraries(xdg-open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem procstat)
+target_link_libraries(launch Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus KF5::WindowSystem procstat)
+target_link_libraries(open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus KF5::WindowSystem procstat)
+target_link_libraries(xdg-open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus KF5::WindowSystem procstat)
 endif()
 
 if (CMAKE_SYSTEM_NAME MATCHES "Linux")
-target_link_libraries(launch Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem)
-target_link_libraries(open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem)
-target_link_libraries(xdg-open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus Qt${QT_VERSION_MAJOR}::Sql KF5::WindowSystem)
+target_link_libraries(launch Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus KF5::WindowSystem)
+target_link_libraries(open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus KF5::WindowSystem)
+target_link_libraries(xdg-open Qt${QT_VERSION_MAJOR}::Widgets Qt${QT_VERSION_MAJOR}::DBus KF5::WindowSystem)
 endif()
 
 ADD_CUSTOM_TARGET(link_target ALL
                   COMMAND ${CMAKE_COMMAND} -E create_symlink launch open)
 
-target_link_libraries(bundle-thumbnailer Qt${QT_VERSION_MAJOR}::Core Qt${QT_VERSION_MAJOR}::Sql)
+target_link_libraries(bundle-thumbnailer Qt${QT_VERSION_MAJOR}::Core)
 
 # Allow for 'make install'
 install(TARGETS launch open bundle-thumbnailer
