Use xresloader/upload-to-github-release

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -46,7 +46,13 @@ jobs:
 
       - name: Upload to GitHub Release
         if: github.event_name == 'push'  # Only run for push events, not pull requests
-        run: |
-          gh release upload continuous ./build/launch_Ubuntu.zip
+        uses: xresloader/upload-to-github-release@v1.3.12
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          file: "./build/*.zip"
+          draft: false
+          verbose: true
+          branches: main
+          update_latest_release: true
+          tag_name: continuous
