cd out/ && zip --symlinks -r ../launch_Ubuntu.zip . && cd -

--- a/.github/workflows/ubuntu.yml
+++ b/.github/workflows/ubuntu.yml
@@ -27,7 +27,7 @@ jobs:
           make -j$(nproc)
           make DESTDIR=out install
           find out/
-          zip --symlinks -r ./launch_Ubuntu.zip out/
+          cd out/ && zip --symlinks -r ../launch_Ubuntu.zip . && cd -
 
       - name: Upload Ubuntu artifact
         uses: actions/upload-artifact@v2
